V1.6 Correction version mobile et logos parcours

--- a/src/parcours/Parcours.scss
+++ b/src/parcours/Parcours.scss
@@ -9,6 +9,7 @@
             display: flex;
             flex-direction: column;
             justify-content: flex-start;
+            gap: 50px;
         }
 
         .parcours-chronologique {
